# domoticz-influxdb

./: .gitignore  README.md  pyproject.toml
domoticz_influxdb/: convert.py  main.py
domoticz_influxdb/domoticz/: __init__.py  client.py
domoticz_influxdb/influxdb/: client.py
